--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h4 class="text-uppercase mb-4">Location</h4>
             <i
               class="icon-location-pin"
-              style="padding: 0px; padding-right: 10px; padding-left: 10px"
+              style="padding-right: 10px; padding-left: 10px"
             ></i
             ><span>Bhubaneswar, India</span>
           </div>
@@ -113,7 +113,8 @@
                 <a
                   class="btn btn-outline-light btn-social text-center rounded-circle"
                   role="button"
-                  href="#"
+                  href="https://www.linkedin.com/in/satyamdalai/"
+                  target="_blank"
                   ><i class="fab fa-linkedin-in fa-fw"></i
                 ></a>
               </li>
@@ -122,7 +123,8 @@
                 <a
                   class="btn btn-outline-light btn-social text-center rounded-circle"
                   role="button"
-                  href="#"
+                  href="https://github.com/satyamdalai"
+                  target="_blank"
                   ><i class="fab fa-github fa-fw"></i
                 ></a>
               </li>
@@ -131,7 +133,8 @@
                 <a
                   class="btn btn-outline-light btn-social text-center rounded-circle"
                   role="button"
-                  href="#"
+                  href="https://twitter.com/satyamdalai"
+                  target="_blank"
                   ><i class="fab fa-twitter fa-fw"></i
                 ></a>
               </li>
@@ -140,7 +143,8 @@
                 <a
                   class="btn btn-outline-light btn-social text-center rounded-circle"
                   role="button"
-                  href="#"
+                  href="https://t.me/equat10n"
+                  target="_blank"
                   ><i class="fab fa-telegram-plane fa-fw"></i
                 ></a>
               </li>
