--- a/index.html
+++ b/index.html
@@ -98,13 +98,9 @@
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 mb-5 mb-lg-0">
+          <div class="lead col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
-            <i
-              class="icon-location-pin"
-              style="padding-right: 10px; padding-left: 10px"
-            ></i
-            ><span>Bhubaneswar, India</span>
+            Bhubaneswar, India
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase">Around the Web</h4>
