--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">Designed using bootstrap studio</h4>
+            <h4 class="text-uppercase mb-4">Thank You for visiting !</h4>
             <p class="lead mb-0"><span>Made with ♥ in India</span></p>
           </div>
         </div>
