--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
           src="assets/img/avatar3cir-min.png"
           style="width: 256px"
         />
-        <h1>Satyam Dalai</h1>
+        <h1>Hi, I'm Satyam Dalai</h1>
         <hr class="star-light" />
-        <h2 class="font-weight-light mb-0">Student at Siksha 'O' Anusandhan</h2>
+        <h2 class="font-weight-light mb-0">
+          Student at Siksha 'O' Anusandhan, Bhubaneswar
+        </h2>
       </div>
     </header>
     <section id="about" class="mb-0">
