added skills section - incomplete

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                 >About</a
               >
             </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a
+                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                href="#skills"
+                >Skills</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -94,6 +101,22 @@
             <!-- <i class="fa fa-download mr-2"></i> -->
             <span>Coming Soon!</span></a
           >
+        </div>
+      </div>
+    </section>
+    <section id="skills" class="mb-0 bg-primary">
+      <div class="container text-white">
+        <h2 class="text-uppercase text-center">Skills</h2>
+        <hr class="star-light mb-5" />
+        <div class="row">
+          <!-- <div class="col-md-12 ml-auto text-center">
+            <p class="lead">
+              Final Year undergraduate pursuing Electronics and Communication
+              Engineering at Siksha 'O' Anusandhan, Bhubaneswar with a keen
+              interest in the field of programming, web development and data
+              science.
+            </p>
+          </div> -->
         </div>
       </div>
     </section>
