--- a/index.html
+++ b/index.html
@@ -108,15 +108,28 @@
       <div class="container text-white">
         <h2 class="text-uppercase text-center">Skills</h2>
         <hr class="star-light mb-5" />
-        <div class="row">
-          <!-- <div class="col-md-12 ml-auto text-center">
-            <p class="lead">
-              Final Year undergraduate pursuing Electronics and Communication
-              Engineering at Siksha 'O' Anusandhan, Bhubaneswar with a keen
-              interest in the field of programming, web development and data
-              science.
-            </p>
-          </div> -->
+        <!-- <div class="row lead">
+          <div class="col-md-3 ml-auto text-center">
+            <div class="container-fluid">Java</div>
+          </div>
+          <div class="col-md-3 ml-auto text-center">
+            <div class="container-fluid">Python</div>
+          </div>
+          <div class="col-md-3 ml-auto text-center">
+            <div class="container-fluid">JavaScript</div>
+          </div>
+          <div class="col-md-3 ml-auto text-center">
+            <div class="container-fluid">SQL</div>
+          </div>
+        </div> -->
+        <div class="text-center mt-4">
+          <a
+            class="btn disabled btn-outline-light btn-xl"
+            role="button"
+            href="#"
+          >
+            <span> Coming Soon! </span>
+          </a>
         </div>
       </div>
     </section>
@@ -136,8 +149,9 @@
                   role="button"
                   href="https://www.linkedin.com/in/satyamdalai/"
                   target="_blank"
-                  ><i class="fab fa-linkedin-in fa-fw"></i
-                ></a>
+                >
+                  <i class="fab fa-linkedin-in fa-fw"></i>
+                </a>
               </li>
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
@@ -146,8 +160,9 @@
                   role="button"
                   href="https://github.com/satyamdalai"
                   target="_blank"
-                  ><i class="fab fa-github fa-fw"></i
-                ></a>
+                >
+                  <i class="fab fa-github fa-fw"></i>
+                </a>
               </li>
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
@@ -156,8 +171,9 @@
                   role="button"
                   href="https://twitter.com/satyamdalai"
                   target="_blank"
-                  ><i class="fab fa-twitter fa-fw"></i
-                ></a>
+                >
+                  <i class="fab fa-twitter fa-fw"></i>
+                </a>
               </li>
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
@@ -166,8 +182,20 @@
                   role="button"
                   href="https://t.me/equat10n"
                   target="_blank"
-                  ><i class="fab fa-telegram-plane fa-fw"></i
-                ></a>
+                >
+                  <i class="fab fa-telegram-plane fa-fw"></i>
+                </a>
+              </li>
+              <li class="list-inline-item"></li>
+              <li class="list-inline-item">
+                <a
+                  class="btn btn-outline-light btn-social text-center rounded-circle"
+                  role="button"
+                  href="https://www.hackerrank.com/satyamdalai"
+                  target="_blank"
+                >
+                  <i class="fab fa-hackerrank fa-fw"></i>
+                </a>
               </li>
             </ul>
           </div>
