--- a/index.html
+++ b/index.html
@@ -108,6 +108,38 @@
       <div class="container text-white">
         <h2 class="text-uppercase text-center">Skills</h2>
         <hr class="star-light mb-5" />
+        <div class="row lead">
+          <div class="col-md-4 text-center">
+            <h4>Programming</h4>
+            <p>
+              <span>Java</span>
+              <br />
+              <span>Python</span>
+            </p>
+          </div>
+          <div class="col-md-4 text-center">
+            <h4>Web</h4>
+            <p>
+              <span>HTML</span>
+              <br />
+              <span>CSS</span>
+              <br />
+              <span>JavaScript</span>
+              <br />
+              <span>Bootstrap</span>
+            </p>
+          </div>
+          <div class="col-md-4 text-center">
+            <h4>Databases</h4>
+            <p>
+              <span>mySQL</span>
+              <br />
+              <span>Postgre SQL</span>
+              <br />
+              <span>SQLite</span>
+            </p>
+          </div>
+        </div>
         <!-- <div class="row lead">
           <div class="col-md-3 ml-auto text-center">
             <div class="container-fluid">Java</div>
@@ -122,15 +154,6 @@
             <div class="container-fluid">SQL</div>
           </div>
         </div> -->
-        <div class="text-center mt-4">
-          <a
-            class="btn disabled btn-outline-light btn-xl"
-            role="button"
-            href="#"
-          >
-            <span> Coming Soon! </span>
-          </a>
-        </div>
       </div>
     </section>
     <footer class="footer text-center">
