--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="container text-white">
         <h2 class="text-uppercase text-center">Skills</h2>
         <hr class="star-light mb-5" />
-        <div class="row lead">
+        <div class="row lead" id="skill-div">
           <div class="col-md-4 text-center">
             <h4>Programming</h4>
             <p>
@@ -138,19 +138,15 @@
             </p>
           </div>
         </div>
-        <!-- <div class="row lead">
-          <div class="col-md-3 ml-auto text-center">
-            <div class="container-fluid">Java</div>
-          </div>
-          <div class="col-md-3 ml-auto text-center">
-            <div class="container-fluid">Python</div>
-          </div>
-          <div class="col-md-3 ml-auto text-center">
-            <div class="container-fluid">JavaScript</div>
-          </div>
-          <div class="col-md-3 ml-auto text-center">
-            <div class="container-fluid">SQL</div>
-          </div>
+        <!-- <div class="text-center mt-4">
+          <a
+            id="skill-btn"
+            class="btn btn-outline-light btn-xl"
+            role="button"
+            href="#"
+          >
+            <span>Click Here!</span></a
+          >
         </div> -->
       </div>
     </section>
