added meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
+    <meta name="author" content="Satyam Dalai" />
+    <meta
+      name="description"
+      content="Personal website of Satyam Dalai designed using Bootstrap Studio and hosted using Github pages."
+    />
     <title>Satyam Dalai</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="icon" href="./assets/img/code-solid.svg" />
