--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="col-md-4 text-center">
             <h4>Databases</h4>
             <p>
-              <span>mySQL</span>
+              <span>MySQL</span>
               <br />
               <span>SQLite</span>
             </p>
