--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             href="#"
           >
             <!-- <i class="fa fa-download mr-2"></i> -->
-            <span>Coming Soon!</span></a
-          >
+            <span>Coming Soon!</span>
+          </a>
         </div>
       </div>
     </section>
