--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 
   <body id="page-top">
     <nav
-      class="navbar navbar-light navbar-expand-lg fixed-top bg-secondary text-uppercase"
+      class="
+        navbar navbar-light navbar-expand-lg
+        fixed-top
+        bg-secondary
+        text-uppercase
+      "
       id="mainNav"
     >
       <div class="container">
@@ -39,7 +44,13 @@
         ><button
           data-toggle="collapse"
           data-target="#navbarResponsive"
-          class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded"
+          class="
+            navbar-toggler navbar-toggler-right
+            text-uppercase
+            bg-primary
+            text-white
+            rounded
+          "
           aria-controls="navbarResponsive"
           aria-expanded="false"
           aria-label="Toggle navigation"
@@ -136,6 +147,8 @@
             <h4>Databases</h4>
             <p>
               <span>MySQL</span>
+              <br />
+              <span>SQLite</span>
             </p>
           </div>
         </div>
@@ -163,7 +176,11 @@
             <ul class="list-inline">
               <li class="list-inline-item">
                 <a
-                  class="btn btn-outline-light btn-social text-center rounded-circle"
+                  class="
+                    btn btn-outline-light btn-social
+                    text-center
+                    rounded-circle
+                  "
                   role="button"
                   href="https://www.linkedin.com/in/satyamdalai/"
                   target="_blank"
@@ -174,7 +191,11 @@
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a
-                  class="btn btn-outline-light btn-social text-center rounded-circle"
+                  class="
+                    btn btn-outline-light btn-social
+                    text-center
+                    rounded-circle
+                  "
                   role="button"
                   href="https://github.com/satyamdalai"
                   target="_blank"
@@ -185,7 +206,11 @@
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a
-                  class="btn btn-outline-light btn-social text-center rounded-circle"
+                  class="
+                    btn btn-outline-light btn-social
+                    text-center
+                    rounded-circle
+                  "
                   role="button"
                   href="https://twitter.com/satyamdalai"
                   target="_blank"
@@ -196,7 +221,11 @@
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a
-                  class="btn btn-outline-light btn-social text-center rounded-circle"
+                  class="
+                    btn btn-outline-light btn-social
+                    text-center
+                    rounded-circle
+                  "
                   role="button"
                   href="https://t.me/equat10n"
                   target="_blank"
