updated about me!

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h1>Hi, I'm Satyam Dalai</h1>
         <hr class="star-light" />
         <h2 class="font-weight-light mb-0">
-          Student at Siksha 'O' Anusandhan, Bhubaneswar
+          SDE Trainee @Hexaware Technologies
         </h2>
       </div>
     </header>
@@ -101,10 +101,10 @@
         <div class="row">
           <div class="col-md-12 ml-auto text-center">
             <p class="lead">
-              Final Year undergraduate pursuing Electronics and Communication
-              Engineering at Siksha 'O' Anusandhan, Bhubaneswar with a keen
-              interest in the field of programming, web development and data
-              science.
+              Graduate in the field of Electronics and Communication Engineering
+              from Siksha 'O' Anusandhan, Bhubaneswar. Interested in
+              programming, web development and data science. Love to play video
+              games in leisure.
             </p>
           </div>
         </div>
