--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
               <span>CSS</span>
               <br />
               <span>Bootstrap</span>
+              <br />
+              <span>JavaScript</span>
             </p>
           </div>
           <div class="col-md-4 text-center">
