--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h1>Hi, I'm Satyam Dalai</h1>
         <hr class="star-light" />
         <h2 class="font-weight-light mb-0">
-          SDE Trainee @Hexaware Technologies
+          Associate Software Engineer @Hexaware Technologies
         </h2>
       </div>
     </header>
