--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
 
   <body id="page-top">
     <nav
-      class="
-        navbar navbar-light navbar-expand-lg
-        fixed-top
-        bg-secondary
-        text-uppercase
-      "
+      class="navbar navbar-light navbar-expand-lg fixed-top bg-secondary text-uppercase"
       id="mainNav"
     >
       <div class="container">
@@ -44,13 +39,7 @@
         ><button
           data-toggle="collapse"
           data-target="#navbarResponsive"
-          class="
-            navbar-toggler navbar-toggler-right
-            text-uppercase
-            bg-primary
-            text-white
-            rounded
-          "
+          class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded"
           aria-controls="navbarResponsive"
           aria-expanded="false"
           aria-label="Toggle navigation"
@@ -150,7 +139,7 @@
             <p>
               <span>MySQL</span>
               <br />
-              <span>SQLite</span>
+              <span>Postgres</span>
             </p>
           </div>
         </div>
@@ -178,11 +167,7 @@
             <ul class="list-inline">
               <li class="list-inline-item">
                 <a
-                  class="
-                    btn btn-outline-light btn-social
-                    text-center
-                    rounded-circle
-                  "
+                  class="btn btn-outline-light btn-social text-center rounded-circle"
                   role="button"
                   href="https://www.linkedin.com/in/satyamdalai/"
                   target="_blank"
@@ -193,11 +178,7 @@
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a
-                  class="
-                    btn btn-outline-light btn-social
-                    text-center
-                    rounded-circle
-                  "
+                  class="btn btn-outline-light btn-social text-center rounded-circle"
                   role="button"
                   href="https://github.com/satyamdalai"
                   target="_blank"
@@ -208,11 +189,7 @@
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a
-                  class="
-                    btn btn-outline-light btn-social
-                    text-center
-                    rounded-circle
-                  "
+                  class="btn btn-outline-light btn-social text-center rounded-circle"
                   role="button"
                   href="https://twitter.com/satyamdalai"
                   target="_blank"
@@ -223,11 +200,7 @@
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
                 <a
-                  class="
-                    btn btn-outline-light btn-social
-                    text-center
-                    rounded-circle
-                  "
+                  class="btn btn-outline-light btn-social text-center rounded-circle"
                   role="button"
                   href="https://t.me/equat10n"
                   target="_blank"
