--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           <div class="col-md-4 text-center">
             <h4>Programming</h4>
             <p>
-              <span>Java</span>
-              <br />
               <span>Python</span>
+              <br />
+              <span>Java</span>
             </p>
           </div>
           <div class="col-md-4 text-center">
@@ -137,9 +137,11 @@
           <div class="col-md-4 text-center">
             <h4>Databases</h4>
             <p>
+              <span>Postgres</span>
+              <br />
               <span>MySQL</span>
               <br />
-              <span>Postgres</span>
+              <span>MongoDB</span>
             </p>
           </div>
         </div>
