Added Certifications and Updated Skillset

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css" />
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css" />
+    <script
+      type="text/javascript"
+      async
+      src="//cdn.credly.com/assets/utilities/embed.js"
+    ></script>
   </head>
 
   <body id="page-top">
@@ -60,6 +65,13 @@
                 class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
                 href="#skills"
                 >Skills</a
+              >
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a
+                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                href="#certifications"
+                >Certifications</a
               >
             </li>
           </ul>
@@ -97,15 +109,6 @@
             </p>
           </div>
         </div>
-        <div class="text-center mt-4">
-          <a
-            class="btn disabled btn-outline-dark btn-xl"
-            role="button"
-            href="#"
-          >
-            <!-- <i class="fa fa-download mr-2"></i> -->
-            <span>Coming Soon!</span>
-          </a>
         </div>
       </div>
     </section>
@@ -123,38 +126,41 @@
             </p>
           </div>
           <div class="col-md-4 text-center">
-            <h4>Web</h4>
+            <h4>Technologies</h4>
             <p>
-              <span>HTML</span>
+              <span>Apache Airflow</span>
               <br />
-              <span>CSS</span>
-              <br />
-              <span>Bootstrap</span>
-              <br />
-              <span>JavaScript</span>
+              <span>ServiceNow</span>
             </p>
           </div>
           <div class="col-md-4 text-center">
             <h4>Databases</h4>
             <p>
-              <span>Postgres</span>
+              <span>PostgreSQL</span>
               <br />
-              <span>MySQL</span>
+              <span>SQL Server</span>
               <br />
               <span>MongoDB</span>
             </p>
           </div>
         </div>
-        <!-- <div class="text-center mt-4">
-          <a
-            id="skill-btn"
-            class="btn btn-outline-light btn-xl"
-            role="button"
-            href="#"
-          >
-            <span>Click Here!</span></a
-          >
-        </div> -->
+      </div>
+    </section>
+    <section id="certifications" class="mb-0">
+      <div class="container">
+        <h2 class="text-uppercase text-center">Certifications</h2>
+        <hr class="star-dark mb-5" />
+        <div class="row lead" id="certifications-div">
+          <div class="col-md-4 text-center">
+            <div data-iframe-width="370" data-iframe-height="270" data-share-badge-id="811fe28f-ab98-4cf1-b9c8-4c27e93cd82e" data-share-badge-host="https://www.credly.com"></div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div data-iframe-width="370" data-iframe-height="270" data-share-badge-id="6ce72a25-4570-4989-8b47-f2aee1534a6a" data-share-badge-host="https://www.credly.com"></div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div data-iframe-width="370" data-iframe-height="270" data-share-badge-id="706ee39e-9fa4-4479-b808-d090ba1d29df" data-share-badge-host="https://www.credly.com"></div>
+          </div>
+        </div>
       </div>
     </section>
     <footer class="footer text-center">
@@ -197,17 +203,6 @@
                   target="_blank"
                 >
                   <i class="fab fa-twitter fa-fw"></i>
-                </a>
-              </li>
-              <li class="list-inline-item"></li>
-              <li class="list-inline-item">
-                <a
-                  class="btn btn-outline-light btn-social text-center rounded-circle"
-                  role="button"
-                  href="https://t.me/equat10n"
-                  target="_blank"
-                >
-                  <i class="fab fa-telegram-plane fa-fw"></i>
                 </a>
               </li>
             </ul>
