adjusted settings for better view on mobile

--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
             </p>
           </div>
         </div>
-        </div>
       </div>
     </section>
     <section id="skills" class="mb-0 bg-primary">
@@ -152,13 +151,28 @@
         <hr class="star-dark mb-5" />
         <div class="row lead" id="certifications-div">
           <div class="col-md-4 text-center">
-            <div data-iframe-width="370" data-iframe-height="270" data-share-badge-id="811fe28f-ab98-4cf1-b9c8-4c27e93cd82e" data-share-badge-host="https://www.credly.com"></div>
+            <div
+              data-iframe-width="360"
+              data-iframe-height="270"
+              data-share-badge-id="811fe28f-ab98-4cf1-b9c8-4c27e93cd82e"
+              data-share-badge-host="https://www.credly.com"
+            ></div>
           </div>
           <div class="col-md-4 text-center">
-            <div data-iframe-width="370" data-iframe-height="270" data-share-badge-id="6ce72a25-4570-4989-8b47-f2aee1534a6a" data-share-badge-host="https://www.credly.com"></div>
+            <div
+              data-iframe-width="360"
+              data-iframe-height="270"
+              data-share-badge-id="6ce72a25-4570-4989-8b47-f2aee1534a6a"
+              data-share-badge-host="https://www.credly.com"
+            ></div>
           </div>
           <div class="col-md-4 text-center">
-            <div data-iframe-width="370" data-iframe-height="270" data-share-badge-id="706ee39e-9fa4-4479-b808-d090ba1d29df" data-share-badge-host="https://www.credly.com"></div>
+            <div
+              data-iframe-width="360"
+              data-iframe-height="270"
+              data-share-badge-id="706ee39e-9fa4-4479-b808-d090ba1d29df"
+              data-share-badge-host="https://www.credly.com"
+            ></div>
           </div>
         </div>
       </div>
