added Airflow Fumdamentals Certification

--- a/index.html
+++ b/index.html
@@ -1,236 +1,174 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-    <meta name="author" content="Satyam Dalai" />
-    <meta
-      name="description"
-      content="Personal website of Satyam Dalai designed using Bootstrap Studio and hosted using Github pages."
-    />
-    <title>Satyam Dalai</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="icon" href="./assets/img/code-solid.svg" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"
-    />
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css" />
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css" />
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css" />
-    <script
-      type="text/javascript"
-      async
-      src="//cdn.credly.com/assets/utilities/embed.js"
-    ></script>
-  </head>
 
-  <body id="page-top">
-    <nav
-      class="navbar navbar-light navbar-expand-lg fixed-top bg-secondary text-uppercase"
-      id="mainNav"
-    >
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >_satyamdalai_</a
-        ><button
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
-              <a
-                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                href="#about"
-                >About</a
-              >
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <meta name="author" content="Satyam Dalai" />
+  <meta name="description"
+    content="Personal website of Satyam Dalai designed using Bootstrap Studio and hosted using Github pages." />
+  <title>Satyam Dalai</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+  <link rel="icon" href="./assets/img/code-solid.svg" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" />
+  <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
+  <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css" />
+  <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css" />
+  <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+</head>
+
+<body id="page-top">
+  <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-secondary text-uppercase" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">_satyamdalai_</a><button data-toggle="collapse"
+        data-target="#navbarResponsive"
+        class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="nav navbar-nav ml-auto">
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#certifications">Certifications</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <header class="masthead bg-primary text-white text-center" style="padding-top: 152px">
+    <div class="container">
+      <img class="img-fluid d-block mx-auto mb-5" src="assets/img/avatar3cir-min.png" style="width: 256px" />
+      <h1>Hi, I'm Satyam Dalai</h1>
+      <hr class="star-light" />
+      <h2 class="font-weight-light mb-0">
+        Associate Software Engineer @Hexaware Technologies
+      </h2>
+    </div>
+  </header>
+  <section id="about" class="mb-0">
+    <div class="container">
+      <h2 class="text-uppercase text-center">About</h2>
+      <hr class="star-dark mb-5" />
+      <div class="row">
+        <div class="col-md-12 ml-auto text-center">
+          <p class="lead">
+            Graduate in the field of Electronics and Communication Engineering
+            from Siksha 'O' Anusandhan, Bhubaneswar. Interested in
+            programming, web development and data science. Love to play video
+            games in leisure.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="skills" class="mb-0 bg-primary">
+    <div class="container text-white">
+      <h2 class="text-uppercase text-center">Skills</h2>
+      <hr class="star-light mb-5" />
+      <div class="row lead" id="skill-div">
+        <div class="col-md-4 text-center">
+          <h4>Programming</h4>
+          <p>
+            <span>Python</span>
+            <br />
+            <span>Java</span>
+          </p>
+        </div>
+        <div class="col-md-4 text-center">
+          <h4>Technologies</h4>
+          <p>
+            <span>Apache Airflow</span>
+            <br />
+            <span>ServiceNow</span>
+          </p>
+        </div>
+        <div class="col-md-4 text-center">
+          <h4>Databases</h4>
+          <p>
+            <span>PostgreSQL</span>
+            <br />
+            <span>SQL Server</span>
+            <br />
+            <span>MongoDB</span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="certifications" class="mb-0">
+    <div class="container">
+      <h2 class="text-uppercase text-center">Certifications</h2>
+      <hr class="star-dark mb-5" />
+      <div class="row lead" id="certifications-div">
+        <div class="col-md-4 text-center">
+          <div data-iframe-width="360" data-iframe-height="270"
+            data-share-badge-id="811fe28f-ab98-4cf1-b9c8-4c27e93cd82e" data-share-badge-host="https://www.credly.com">
+          </div>
+        </div>
+        <div class="col-md-4 text-center">
+          <div data-iframe-width="360" data-iframe-height="270"
+            data-share-badge-id="6ce72a25-4570-4989-8b47-f2aee1534a6a" data-share-badge-host="https://www.credly.com">
+          </div>
+        </div>
+        <div class="col-md-4 text-center">
+          <div data-iframe-width="360" data-iframe-height="270"
+            data-share-badge-id="4b097cf6-f016-4234-abc9-dfc0029f867f" data-share-badge-host="https://www.credly.com">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer text-center">
+    <div class="container">
+      <div class="row">
+        <div class="lead col-md-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Location</h4>
+          Bhubaneswar, India
+        </div>
+        <div class="col-md-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase">Around the Web</h4>
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" role="button"
+                href="https://www.linkedin.com/in/satyamdalai/" target="_blank">
+                <i class="fab fa-linkedin-in fa-fw"></i>
+              </a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a
-                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                href="#skills"
-                >Skills</a
-              >
+            <li class="list-inline-item"></li>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" role="button"
+                href="https://github.com/satyamdalai" target="_blank">
+                <i class="fab fa-github fa-fw"></i>
+              </a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a
-                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                href="#certifications"
-                >Certifications</a
-              >
+            <li class="list-inline-item"></li>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" role="button"
+                href="https://twitter.com/satyamdalai" target="_blank">
+                <i class="fab fa-twitter fa-fw"></i>
+              </a>
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
-    <header
-      class="masthead bg-primary text-white text-center"
-      style="padding-top: 152px"
-    >
-      <div class="container">
-        <img
-          class="img-fluid d-block mx-auto mb-5"
-          src="assets/img/avatar3cir-min.png"
-          style="width: 256px"
-        />
-        <h1>Hi, I'm Satyam Dalai</h1>
-        <hr class="star-light" />
-        <h2 class="font-weight-light mb-0">
-          Associate Software Engineer @Hexaware Technologies
-        </h2>
-      </div>
-    </header>
-    <section id="about" class="mb-0">
-      <div class="container">
-        <h2 class="text-uppercase text-center">About</h2>
-        <hr class="star-dark mb-5" />
-        <div class="row">
-          <div class="col-md-12 ml-auto text-center">
-            <p class="lead">
-              Graduate in the field of Electronics and Communication Engineering
-              from Siksha 'O' Anusandhan, Bhubaneswar. Interested in
-              programming, web development and data science. Love to play video
-              games in leisure.
-            </p>
-          </div>
+        <div class="col-md-4">
+          <h4 class="text-uppercase mb-4">Thank You for visiting !</h4>
+          <p class="lead mb-0"><span>Made with ♥ in India</span></p>
         </div>
       </div>
-    </section>
-    <section id="skills" class="mb-0 bg-primary">
-      <div class="container text-white">
-        <h2 class="text-uppercase text-center">Skills</h2>
-        <hr class="star-light mb-5" />
-        <div class="row lead" id="skill-div">
-          <div class="col-md-4 text-center">
-            <h4>Programming</h4>
-            <p>
-              <span>Python</span>
-              <br />
-              <span>Java</span>
-            </p>
-          </div>
-          <div class="col-md-4 text-center">
-            <h4>Technologies</h4>
-            <p>
-              <span>Apache Airflow</span>
-              <br />
-              <span>ServiceNow</span>
-            </p>
-          </div>
-          <div class="col-md-4 text-center">
-            <h4>Databases</h4>
-            <p>
-              <span>PostgreSQL</span>
-              <br />
-              <span>SQL Server</span>
-              <br />
-              <span>MongoDB</span>
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="certifications" class="mb-0">
-      <div class="container">
-        <h2 class="text-uppercase text-center">Certifications</h2>
-        <hr class="star-dark mb-5" />
-        <div class="row lead" id="certifications-div">
-          <div class="col-md-4 text-center">
-            <div
-              data-iframe-width="360"
-              data-iframe-height="270"
-              data-share-badge-id="811fe28f-ab98-4cf1-b9c8-4c27e93cd82e"
-              data-share-badge-host="https://www.credly.com"
-            ></div>
-          </div>
-          <div class="col-md-4 text-center">
-            <div
-              data-iframe-width="360"
-              data-iframe-height="270"
-              data-share-badge-id="6ce72a25-4570-4989-8b47-f2aee1534a6a"
-              data-share-badge-host="https://www.credly.com"
-            ></div>
-          </div>
-          <div class="col-md-4 text-center">
-            <div
-              data-iframe-width="360"
-              data-iframe-height="270"
-              data-share-badge-id="706ee39e-9fa4-4479-b808-d090ba1d29df"
-              data-share-badge-host="https://www.credly.com"
-            ></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <footer class="footer text-center">
-      <div class="container">
-        <div class="row">
-          <div class="lead col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Location</h4>
-            Bhubaneswar, India
-          </div>
-          <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase">Around the Web</h4>
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a
-                  class="btn btn-outline-light btn-social text-center rounded-circle"
-                  role="button"
-                  href="https://www.linkedin.com/in/satyamdalai/"
-                  target="_blank"
-                >
-                  <i class="fab fa-linkedin-in fa-fw"></i>
-                </a>
-              </li>
-              <li class="list-inline-item"></li>
-              <li class="list-inline-item">
-                <a
-                  class="btn btn-outline-light btn-social text-center rounded-circle"
-                  role="button"
-                  href="https://github.com/satyamdalai"
-                  target="_blank"
-                >
-                  <i class="fab fa-github fa-fw"></i>
-                </a>
-              </li>
-              <li class="list-inline-item"></li>
-              <li class="list-inline-item">
-                <a
-                  class="btn btn-outline-light btn-social text-center rounded-circle"
-                  role="button"
-                  href="https://twitter.com/satyamdalai"
-                  target="_blank"
-                >
-                  <i class="fab fa-twitter fa-fw"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">Thank You for visiting !</h4>
-            <p class="lead mb-0"><span>Made with ♥ in India</span></p>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/index.js"></script>
-  </body>
+    </div>
+  </footer>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <script src="assets/js/index.js"></script>
+</body>
+
 </html>
