--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="row">
         <div class="lead col-md-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          Bhubaneswar, India
+          Chennai, India
         </div>
         <div class="col-md-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase">Around the Web</h4>
