Updated About Section

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="col-md-12 ml-auto text-center">
           <p class="lead">
             Graduate in the field of Electronics and Communication Engineering
-            from Siksha 'O' Anusandhan, Bhubaneswar. Interested in
-            programming, web development and data science. Love to play video
+            from Siksha 'O' Anusandhan, Bhubaneswar. Automation developer skilled in Python developing digital
+            IT solutions. Love to play video
             games in leisure.
           </p>
         </div>
