Updated description and skillset.

--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
       <div class="row">
         <div class="col-md-12 ml-auto text-center">
           <p class="lead">
-            Graduate in the field of Electronics and Communication Engineering
-            from Siksha 'O' Anusandhan, Bhubaneswar. Automation developer skilled in Python developing digital
-            IT solutions. Love to play video
-            games in leisure.
+            Automation developer skilled in Python developing scalable and performant digital IT tools and solutions.
+            Love to play football and
+            video games.
           </p>
         </div>
       </div>
@@ -87,7 +86,11 @@
           <p>
             <span>Apache Airflow</span>
             <br />
+            <span>Azure</span>
+            <br />
             <span>ServiceNow</span>
+            <br />
+            <span>Docker</span>
           </p>
         </div>
         <div class="col-md-4 text-center">
