style(index.html): change job title from Associate Software Engineer to Software Engineer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h1>Hi, I'm Satyam Dalai</h1>
       <hr class="star-light" />
       <h2 class="font-weight-light mb-0">
-        Associate Software Engineer @Hexaware Technologies
+        Software Engineer @Hexaware Technologies
       </h2>
     </div>
   </header>
