--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h1>Hi, I'm Satyam Dalai</h1>
       <hr class="star-light" />
       <h2 class="font-weight-light mb-0">
-        Software Engineer @Hexaware Technologies
+        Associate Software Engineer @Hexaware Technologies
       </h2>
     </div>
   </header>
@@ -60,9 +60,11 @@
       <div class="row">
         <div class="col-md-12 ml-auto text-center">
           <p class="lead">
-            Automation developer skilled in Python developing scalable and performant digital IT tools and solutions.
-            Love to play football and
-            video games.
+            Python developer with a love for playing football and video games. Currently focused on crafting and
+            consulting solutions using Generative AI technologies. With
+            expertise in Python and Apache Airflow, I've automated infrastructure,
+            developed
+            robust web APIs, and transformed end-user experiences.
           </p>
         </div>
       </div>
@@ -73,34 +75,50 @@
       <h2 class="text-uppercase text-center">Skills</h2>
       <hr class="star-light mb-5" />
       <div class="row lead" id="skill-div">
-        <div class="col-md-4 text-center">
-          <h4>Programming</h4>
+        <div class="col-md-3 text-center">
+          <h4>Languages</h4>
           <p>
             <span>Python</span>
             <br />
-            <span>Java</span>
+            <span>SQL</span>
+            <br />
+            <span>Javascript</span>
           </p>
         </div>
-        <div class="col-md-4 text-center">
-          <h4>Technologies</h4>
+        <div class="col-md-3 text-center">
+          <h4>Tools & Frameworks</h4>
           <p>
-            <span>Apache Airflow</span>
-            <br />
-            <span>Azure</span>
+            <span>FastAPI</span>
             <br />
             <span>ServiceNow</span>
             <br />
+            <span>Apache Airflow</span>
+            <br />
+            <span>ReactJS</span>
+            <br />
             <span>Docker</span>
+            <br />
+            <span>Kubernetes</span>
           </p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-3 text-center">
           <h4>Databases</h4>
           <p>
             <span>PostgreSQL</span>
             <br />
             <span>SQL Server</span>
             <br />
+            <span>SQLite</span>
+            <br />
             <span>MongoDB</span>
+          </p>
+        </div>
+        <div class="col-md-3 text-center">
+          <h4>Cloud</h4>
+          <p>
+            <span>Azure</span>
+            <br />
+            <span>AWS</span>
           </p>
         </div>
       </div>
